<resources>
    <string name="app_name">CloneTwitter</string>
    <string name="cloneTwitter_title">CloneTwitter</string>
    <string name="email_title">Email</string>
    <string name="password_title">Password</string>
    <string name="ingresar">Iniciar Sesión</string>
    <string name="register_title">Si no tienes cuenta, regístrate aquí</string>
    <string name="init_sesion_title">Si posee una cuenta, inicie sesión</string>
    <string name="register_title_btn">Registrarme</string>
    <string name="user_name">Nombre de Usuario</string>
    <string name="email_error">Ingrese un Email</string>
    <string name="password_error">Ingrese un Password</string>
    <string name="login_error">Email y/o password incorrecto</string>
    <string name="register_error">Hubo un error. Por favor, intente nuevamente</string>
    <string name="tweet_list_empty">Lista de Tweet vacía</string>
    <string name="like_numbers">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="twittear">Twittear</string>
    <string name="text_new_tweet">¿Qué está pasando?</string>

</resources>